Fixing bug 112473. Eliminate unnecessary allocations in the CSS parser and speed up NS_NewHTMLReflowCommand() a bit. r=dbaron@fas.harvard.edu, rs=waterson@netscape.com